# icu

icu4c/source/: CMakeLists.txt  icufunctions.cmake
icu4c/source/common/: CMakeLists.txt
icu4c/source/data/: CMakeLists.txt
icu4c/source/i18n/: CMakeLists.txt
icu4c/source/io/: CMakeLists.txt
icu4c/source/layoutex/: CMakeLists.txt
icu4c/source/python/icutools/databuilder/: __main__.py
icu4c/source/python/icutools/databuilder/renderers/: cmake.py
icu4c/source/stubdata/: CMakeLists.txt
icu4c/source/test/: CMakeLists.txt
icu4c/source/test/testdata/: CMakeLists.txt
icu4c/source/tools/: CMakeLists.txt
icu4c/source/tools/ctestfw/: CMakeLists.txt
icu4c/source/tools/escapesrc/: CMakeLists.txt
icu4c/source/tools/genbrk/: CMakeLists.txt
icu4c/source/tools/genccode/: CMakeLists.txt
icu4c/source/tools/gencfu/: CMakeLists.txt
icu4c/source/tools/gencmn/: CMakeLists.txt
icu4c/source/tools/gencnval/: CMakeLists.txt
icu4c/source/tools/gendict/: CMakeLists.txt
icu4c/source/tools/gennorm2/: CMakeLists.txt
icu4c/source/tools/genrb/: CMakeLists.txt
icu4c/source/tools/gensprep/: CMakeLists.txt
icu4c/source/tools/gentest/: CMakeLists.txt
icu4c/source/tools/icuinfo/: CMakeLists.txt
icu4c/source/tools/icupkg/: CMakeLists.txt
icu4c/source/tools/makeconv/: CMakeLists.txt
icu4c/source/tools/pkgdata/: CMakeLists.txt
icu4c/source/tools/toolutil/: CMakeLists.txt
